# parse_qwantz

./: .gitignore  LICENSE  MANIFEST.in  README.md  add_panel_override.py  add_test_case.sh  box.py  character_shapes.py  cli.py  colors.py  detect_blocks.py  detect_lines.py  detect_text.py  detect_thought.py  elements.py  fonts.py  lines.py  logger.py  match_blocks.py  match_lines.py  match_thought.py  parse_qwantz.py  pixels.py  prepare_image.py  prepare_panels.sh  pyproject.toml  requirements.txt  shape.py  simple_image.py  sort_panel_overrides.py  text_blocks.py  text_lines.py
parse_qwantz/: __init__.py  __main__.py  box.py  char_variants.py  cli.py  color_logs.py  colors.py  detect_thought.py  elements.py  fonts.py  hyphens.py  image_viewer.py  lines.py  main.py  match_blocks.py  match_lines.py  match_thought.py  panel_overrides.py  panels.py  parser.py  pixels.py  prepare_image.py  shape.py  simple_image.py  svg_gen.py  text_blocks.py  text_lines.py
parse_qwantz/data/: panel_overrides.json
parse_qwantz/dict/: README.md  canadian-english-huge  html-words.txt  manual-additions.txt  manual-removed.txt  unambiguous-qwantz.txt
test/: e2e_test.py  regression_test.py
test/expected_outputs/: 0001.txt  0002.txt  0003.txt  0006.txt  0007.txt  0010.txt  0011.txt  0013.txt  0014.txt  0015.txt  0016.txt  0017.txt  0018.txt  0019.txt  0020.txt  0022.txt  0023.txt  0027.txt  0028.txt  0033.txt  0036.txt  0043.txt  0048.txt  0049.txt  0051.txt  0053.txt  0056.txt  0057.txt  0062.txt  0096.txt  0112.txt  0123.txt  0127.txt  0219.txt  0245.txt  0256.txt  0301.txt  0316.txt  0332.txt  0333.txt  (+30 more)
