[project]
name = "parse_qwantz"
authors = [{name = "Jan Szejko", email = "jan.szejko@gmail.com"}]
version = "2025.4.1"
description = "Transcript generator for Dinosaur Comics"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Typing :: Typed",
]
dependencies = [
    "Pillow",
    "typer",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
homepage = "https://github.com/janek37/parse_qwantz"

[project.scripts]
parse-qwantz = "parse_qwantz:app"

[tool.setuptools]
packages = ["parse_qwantz", "parse_qwantz.data", "parse_qwantz.img", "parse_qwantz.dict"]
